# Octo-agent

./: .gitignore  README.md  agent.md  heartbeats.json  install.bat  install.sh  main.py  mcp_config.json  memory.md  pyproject.toml  requirements.txt  soul.md
agents/: architect.md  coder.md  debugger.md  researcher.md  reviewer.md
app/: agent_state.py  cli.py  cron.py  engine.py  heartbeat.py  mcp_client.py  mcp_server.py  mpc.py  openrouter.py  skills.py  tools.py
app/web/: server.py
app/web/static/: app.js  index.html  style.css
skills/: __init__.py  bug.md  builtin.py  commit.md  compact.md  docs.md  doctor.md  example.md  explain.md  lint.md  optimize.md  pr.md  refactor.md  review.md  security.md  test.md
